# prime-compute-manager

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  README.md  install.sh  pcm-launcher.sh  prime-login.sh  prime-output.txt  pyproject.toml  uninstall.sh
.claude/: settings.local.json
PCM.app/Contents/: Info.plist
PCM.app/Contents/MacOS/: pcm-tui
examples/: basic_usage.py  batch_jobs.py  monitoring.py
scripts/: pod_setup.sh
src/prime_compute_manager/: __init__.py  api_client.py  cli.py  config.py  manager.py  models.py  monitor.py  parser.py  queue.py  ssh_manager.py  tui.py
tests/: test_manager.py
